Experimenting no barcode dialog fragment. Replacing some uses of LinkedList with List.